5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1885_3138.log
== TEST (2019-07-09 10:17:28) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
m = ((v[0]**7+v[1]**7+v[n-1]**7)/n)**1/7
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:19:20) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:22:16) 
-- CODE:
from numpy import*
n = arrey(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:22:25) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:27:20) 
-- CODE:
from numpy import*
from numpy.lgl import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:00) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:08) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:09) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:32) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:44) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:45) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:46) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:51) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for i in range(n):
	m = ((n[0]**7+n[1]**7+n[i-1]**7)/i)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:06) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for x in range(n):
	m = ((n[0]**7+n[1]**7+n[x-1]**7)/x)**1/7
print(round(m, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:41) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for x in range(n):
	m = ((n[0]**7+n[1]**7+n[x-1]**7)/x)**1/7
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:26) 
-- CODE:
from numpy import*
n = array(eval(input("n :")))
for x in(n):
	m = ((n[0]**7+n[1]**7+n[x-1]**7)/x)**1/7
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
